# caenhv-client

./: .gitmodules  DESIGN.md
.github/workflows/: build-windows.yml  publish-python.yml
caenhv-client/: __init__.py  app.py  communicator.py  desktop-app.json  install_shortcut.py  pyproject.toml
caenhv-client-python/: README.md  pyproject.toml
caenhv-client-python/src/caenhv_client_python/: __init__.py
caenhv-client-python/src/caenhv_client_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
caenhv-client-python/tests/: conftest.py  test_remote_client.py
caenhv-client/caenhv_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
caenhv-client/gui/: channel_widget.py  local_server.py  main_window.py  standalone_window.py
caenhv-client/gui/ui/: channel.ui  main.ui
caenhv-client/labscript_integration/: __init__.py
caenhv-client/labscript_integration/caenhv/: __init__.py  blacs_tabs.py  blacs_workers.py  labscript_devices.py  register_classes.py
caenhv-client/worker/: __init__.py  client_worker.py
caenhv_client/: app.py
caenhv_client/gui/: __init__.py  channel_widget.py  main_window.py  standalone_window.py
caenhv_client/models/: __init__.py  state.py
caenhv_client/worker/: client_worker.py
doc/: command.md
packaging/: pyinstaller_entry.py
tests/: test_prepare_execute_split.py
