[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caenhv-client"
version = "0.2.8"
description = "Standalone client for CAEN HV via devman, with a local-socket fire/raise interface"
requires-python = ">=3.10"
dependencies = [
  "caenhv-devman-client>=0.2.0",
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]

[project.scripts]
caenhv-client = "caenhv_client.app:main"
caenhv-client-install-shortcut = "caenhv_client.install_shortcut:main"

[project.gui-scripts]
caenhv_client-gui = "caenhv_client.app:main"
caenhv-client-gui = "caenhv_client.app:main"

[tool.setuptools]
include-package-data = true
packages = [
  "caenhv_client",
  "caenhv_client.gui",
  "caenhv_client.worker",
]

[tool.setuptools.package-dir]
"caenhv_client" = "."
"caenhv_client.gui" = "gui"
"caenhv_client.worker" = "worker"

[tool.setuptools.package-data]
"caenhv_client.gui" = ["ui/*.ui"]
"caenhv_client" = ["resources/*.svg", "resources/*.ico", "resources/*.png"]
